# benchmarks

./: .readthedocs.yaml  README.md  pyproject.toml
analytic-donut/: Dockerfile  (+1 more)
models/acoustic_gravity/WaveInOcean_um/core/: CMakeLists.txt  README.md
models/acoustic_gravity/WaveInOcean_um/core/Data/: cube.mesh  cylinder.msh  disc.msh  heart.mesh  potatoe.msh  sea_bottom_elevation.msh
models/acoustic_gravity/WaveInOcean_um/core/Scripts/: ViZiR_README.md  count_number_of_lines.py  generate_vizir_movie.py  substitute_env_variable.py
models/acoustic_gravity/WaveInOcean_um/core/Scripts/Tet/: EnrichedElements.m  QuadartureP3.m  Tet15Tet14.m  gradientinterpolation1514.txt  gradientinterpolation1514_opt.txt  transposegradientinterpolation1514.txt
models/acoustic_gravity/WaveInOcean_um/core/Sources/: OndoMathX.h
models/acoustic_gravity/WaveInOcean_um/core/Sources/FEM/: FEM.h
models/acoustic_gravity/WaveInOcean_um/core/Sources/FEM/LobattoX/: LobattoX.h
models/acoustic_gravity/WaveInOcean_um/core/Sources/FEM/LobattoX/FESpace/: FEMesh.h  FEMesh.hxx  FESpace.h  FESpaceT.h  FESpaceTSubdomain.hxx
models/acoustic_gravity/WaveInOcean_um/core/Sources/FEM/LobattoX/IO/: IO_VTK.h  IO_Vizir.h
models/acoustic_gravity/WaveInOcean_um/core/Sources/FEM/TetriX/: TetriX.h
models/acoustic_gravity/WaveInOcean_um/core/Sources/Field/: Field.h  FourthOrderTensor.h  IsotropicTensor.h  Matrix.h  NeoHookeanTensor.h  Scalar.h  ThirdOrderTensor.h  Vector.h
models/acoustic_gravity/WaveInOcean_um/core/Sources/Mesh/: Mesh.h  Mesh.hxx
models/acoustic_gravity/WaveInOcean_um/core/Sources/Mesh/Element/: Element.h  ElementT.h  ElementT.hxx  Factory.h  Hexahedron27.h  Hexahedron8.h  Quadrangle4.h  Quadrangle9.h  Segment2.h  Segment3.h  Tetrahedron4.h  Triangle3.h
models/acoustic_gravity/WaveInOcean_um/core/Sources/Mesh/IO/: IO_MESH.hxx  IO_MSH.hxx  IO_VTK.hxx
models/acoustic_gravity/WaveInOcean_um/core/Sources/Mesh/ReferenceElement/: RElementT.h  RHexahedron.h  RQuadrangle.h  RSegment.h  RTetrahedron.h  RTriangle.h
models/acoustic_gravity/WaveInOcean_um/core/Sources/Mesh/Topology/: Edge.h  Face.h  Point.h
models/acoustic_gravity/WaveInOcean_um/core/Sources/Mesh/Utility/: Coloring.hxx  Intersection.hxx  Other.hxx  Rasterization.hxx  SubDivide.hxx
models/acoustic_gravity/WaveInOcean_um/core/Sources/Utility/: ArrayAlgebra.h  Defines.h  Functions.h  IO.h  Utility.h
models/acoustic_gravity/WaveInOcean_um/core/Sources/Utility/LinearAlgebraLibrary/: DFT.h  EigenOndoMathX.h  LinearAlgebraLibrary.h  PCG.h  PowerIteration.h  VectorSequence.h
models/acoustic_gravity/WaveInOcean_um/core/Testing/: CMakeLists.txt
models/acoustic_gravity/WaveInOcean_um/core/Testing/FESpace/: AcousticWave_2D_Mesh.cpp  AcousticWave_Circle.cpp  AcousticWave_Cube.cpp  AcousticWave_Cylinder.cpp  AcousticWave_Square.cpp  AcousticWave_Square_PML.cpp  ElasticWave_Plate.cpp  FESpaceTest.sh.in  GravitoAcousticWave_Square_PML.cpp  IncompressibleElasticWave_Square.cpp  ParaxialWave45_Square.cpp  ParaxialWave_Square.cpp  Transport_Square.cpp
models/acoustic_gravity/WaveInOcean_um/core/Testing/FESpace/NonLinear/: NLElasticWave_Bar.cpp  NLElasticWave_Cube.cpp
models/acoustic_gravity/WaveInOcean_um/core/Testing/Mesh/: Coloring.cpp  Intersection.cpp  MeshTest.sh.in  Rasterization.cpp  SubDivide.cpp
models/acoustic_gravity/WaveInOcean_um/core/Testing/Other/: CubeBndy.cpp  CylinderBndy.cpp  HardCodedGLE.cpp  OtherTest.sh.in
models/acoustic_gravity/WaveInOcean_um/core/Testing/Tetrix/: AcousticWave_Heart.cpp  Tetrix.sh.in
models/acoustic_gravity/WaveInOcean_um/ocean/: CMakeLists.txt
models/acoustic_gravity/WaveInOcean_um/ocean/Sources/: CMakeLists.txt  Field_ScalarToVector.h  Parameters_um.h  Utility.h  WaveInOcean_save.cpp  WaveInOcean_um.cpp  WaveInOcean_um_launcher.sh.in
(+317 files in other folders)
